// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fullscreen is closed FullscreenButton DOM should match snapshot 1`] = `
<ToolbarButton
  d="M4.5 11H3v4h4v-1.5H4.5V11zM3 7h1.5V4.5H7V3H3v4zm10.5 6.5H11V15h4v-4h-1.5v2.5zM11 3v1.5h2.5V7H15V3h-4z"
  onClick={[Function]}
  size="20px"
  title="Fullscreen"
  viewBox="0 0 18 18"
/>
`;

exports[`fullscreen is opened FullscreenButton DOM if fullscreen is opened should match snapshot 1`] = `
<ToolbarButton
  d="M682 342h128v84h-212v-212h84v128zM598 810v-212h212v84h-128v128h-84zM342 342v-128h84v212h-212v-84h128zM214 682v-84h212v212h-84v-128h-128z"
  onClick={[Function]}
  size="24px"
  title="Fullscreen"
  viewBox="0 0 950 1024"
/>
`;

exports[`fullscreen is opened FullscreenButton DOM should match snapshot 1`] = `
<ToolbarButton
  d="M682 342h128v84h-212v-212h84v128zM598 810v-212h212v84h-128v128h-84zM342 342v-128h84v212h-212v-84h128zM214 682v-84h212v212h-84v-128h-128z"
  onClick={[Function]}
  size="24px"
  title="Fullscreen"
  viewBox="0 0 950 1024"
/>
`;

exports[`passing correct props to ToolbarButton if fullscreen is opened FullscreenButton DOM if fullscreen is opened should match snapshot 1`] = `
<ToolbarButton
  d="M682 342h128v84h-212v-212h84v128zM598 810v-212h212v84h-128v128h-84zM342 342v-128h84v212h-212v-84h128zM214 682v-84h212v212h-84v-128h-128z"
  onClick={[Function]}
  size="24px"
  title="Fullscreen"
  viewBox="0 0 950 1024"
/>
`;
